--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,9 @@ import {
   CloseButton,
   Button,
   HStack,
-  Text,
   Textarea,
   Field,
-  useToast,
+  createToast,   // ✅ new import
 } from "@chakra-ui/react";
 import { useForm } from "react-hook-form";
 import { useMutation, useQueryClient } from "@tanstack/react-query";
@@ -38,7 +37,7 @@ export function RefuseWallCrossDialog({
     formState: { errors },
   } = useForm<RefuseFormData>();
   const queryClient = useQueryClient();
-  const toast = useToast();
+  const toast = createToast();  // ✅ instead of useToast
 
   const refuseMutation = useMutation({
     mutationFn: async (data: RefuseFormData) => {
@@ -58,9 +57,8 @@ export function RefuseWallCrossDialog({
       toast({
         title: "Wall Cross Refused",
         description: "Refusal successfully recorded.",
-        status: "success",
+        type: "success",   // ✅ type instead of status
         duration: 3000,
-        isClosable: true,
       });
       reset();
       onClose();
@@ -69,9 +67,8 @@ export function RefuseWallCrossDialog({
       toast({
         title: "Error",
         description: "Failed to refuse wall cross.",
-        status: "error",
+        type: "error",
         duration: 3000,
-        isClosable: true,
       });
     },
   });
