--- a/test/ty.html
+++ b/test/ty.html
@@ -1,14 +1,16 @@
+const state = useAsync(async (): Promise<RestrictionCategories[]> => {
+  const response = await fetch(`${config.apis.mdmApi}/EntitledRestrictionCategories`, {
+    method: 'GET',
+    credentials: 'include',
+    headers: {
+      'Content-Type': 'application/json; charset=utf-8',
+      'Cache-Control': 'no-cache',
+    },
+  });
 
-  const state = useAsync(async (): Promise<RestrictionCategories[]> => {
-    const response = await fetch(`${config.apis.mdmApi}/EntitledRestrictionCategories`);
-    if (!response.ok) return [];
-    return response.json();
-  }, []);
+  if (!response.ok) {
+    return [];
+  }
 
-    fetch(`${config.apis.mdmApi}/EntitledRestrictionCategories`, {
-      method: 'GET',
-      credentials: 'include',
-      headers: {
-        'Content-Type': 'application/json; charset=utf-8',
-        cache: 'no-cache'
-      }
+  return response.json();
+}, []);
