--- a/test/ty.html
+++ b/test/ty.html
@@ -1,18 +1,43 @@
-// src/components/ui/toaster.tsx
-'use client'; // Required for Next.js client components
+"use client"
 
-import { createToaster } from '@chakra-ui/react';
+import {
+  Toaster as ChakraToaster,
+  Portal,
+  Spinner,
+  Stack,
+  Toast,
+  createToaster,
+} from "@chakra-ui/react"
 
 export const toaster = createToaster({
-  placement: 'top-end', // Options: 'top', 'top-left', 'top-right', 'bottom', etc.
-  max: 5, // Maximum visible toasts
-  duration: 4000, // Default auto-close duration in ms
-  pauseOnPageIdle: true, // Pause timers when tab is inactive
-  offsets: { top: '20px', right: '20px' }, // Custom spacing from edges
-  overlap: false, // Allow toasts to overlap if true
-});
+  placement: "bottom-end",
+  pauseOnPageIdle: true,
+})
 
-// The Toaster component for rendering in your app
-export function Toaster() {
-  return <div id="__chakra_toaster__portal" />;
+export const Toaster = () => {
+  return (
+    <Portal>
+      <ChakraToaster toaster={toaster} insetInline={{ mdDown: "4" }}>
+        {(toast) => (
+          <Toast.Root width={{ md: "sm" }}>
+            {toast.type === "loading" ? (
+              <Spinner size="sm" color="blue.solid" />
+            ) : (
+              <Toast.Indicator />
+            )}
+            <Stack gap="1" flex="1" maxWidth="100%">
+              {toast.title && <Toast.Title>{toast.title}</Toast.Title>}
+              {toast.description && (
+                <Toast.Description>{toast.description}</Toast.Description>
+              )}
+            </Stack>
+            {toast.action && (
+              <Toast.ActionTrigger>{toast.action.label}</Toast.ActionTrigger>
+            )}
+            {toast.closable && <Toast.CloseTrigger />}
+          </Toast.Root>
+        )}
+      </ChakraToaster>
+    </Portal>
+  )
 }
