--- a/test/ty.html
+++ b/test/ty.html
@@ -1,10 +1,182 @@
-<Button
-            type="submit"
-            colorScheme="blue"
-            loading={isSubmit}
-            loadingText="Saving"
-            spinner={<Spinner size='sm' />}
-           
-          >
-            {buttonLabel}
-          </Button>
+// IssuerHoldingsModal.tsx
+import {
+  Dialog,
+  Portal,
+  Button,
+  CloseButton,
+  HStack,
+  VStack,
+  Text,
+  Box,
+  Table,
+  Tabs,
+} from "@chakra-ui/react";
+
+interface Holding {
+  [key: string]: any;
+}
+
+interface Trade {
+  [key: string]: any;
+}
+
+interface IssuerDetails {
+  wcId: number | null;
+  validatedIssuerName?: string;
+  vrequest?: Record<string, any>;
+  hgList?: Holding[];
+  thList?: Trade[];
+}
+
+interface IssuerHoldingsModalProps {
+  open: boolean;
+  onHClose: () => void;
+  issuerDetails: IssuerDetails;
+  onProceed: () => void;
+  onRefuse: () => void;
+}
+
+export function IssuerHoldingsModal({
+  open,
+  onHClose,
+  issuerDetails,
+  onProceed,
+  onRefuse
+}: IssuerHoldingsModalProps) {
+  if (!issuerDetails) return null;
+
+  const { hgList = [], thList = [] } = issuerDetails;
+
+  return (
+    <Dialog.Root open={open} onOpenChange={(open) => !open && onHClose()}>
+      <Portal>
+        <Dialog.Backdrop />
+        <Dialog.Positioner>
+          <Dialog.Content  maxW="80vw"  p={4}>
+            <Dialog.Header>
+              <Text fontSize="lg" fontWeight="bold">
+                Issuer Holdings -{" "}
+                {issuerDetails.validatedIssuerName ||
+                  issuerDetails.vrequest?.issuerName ||
+                  "-"}
+              </Text>
+            </Dialog.Header>
+
+            <Dialog.CloseTrigger asChild>
+              <CloseButton position="absolute" top={2} right={2} onClick={onHClose} />
+            </Dialog.CloseTrigger>
+
+            <Dialog.Body>
+              <VStack mb={6} align="stretch">
+                {/* Issuer Details */}
+                {issuerDetails.vrequest && (
+                  <Box  p={4} borderRadius="md">
+                    <Text fontWeight="bold" mb={2}>
+                      Issuer Details
+                    </Text>
+                    <HStack mb={8} flexWrap="wrap">
+                      {Object.entries(issuerDetails.vrequest).map(
+                        ([key, value]) => (
+                          <Text key={key} fontSize="sm">
+                            <strong>{key}:</strong> {String(value) ?? "-"}
+                          </Text>
+                        )
+                      )}
+                    </HStack>
+                  </Box>
+                )}
+
+                {/* Tabs for Holdings & Trade History */}
+                <Tabs.Root defaultValue="holdings">
+                  <Tabs.List mb={4}>
+                    <Tabs.Trigger value="holdings">Holdings</Tabs.Trigger>
+                    <Tabs.Trigger value="trades">Trade History</Tabs.Trigger>
+                  </Tabs.List>
+
+                  <Tabs.Content value="holdings">
+                    <Box>
+                      <Text fontWeight="bold" mb={2}>
+                        Holdings
+                      </Text>
+                      <Box overflowX="auto">
+                        <Table.Root size="sm">
+                          <Table.Header>
+                            <Table.Row>
+                              {hgList[0] &&
+                                Object.keys(hgList[0]).map((key) => (
+                                  <Table.ColumnHeader key={key}>
+                                    {key}
+                                  </Table.ColumnHeader>
+                                ))}
+                            </Table.Row>
+                          </Table.Header>
+                          <Table.Body>
+                            {hgList.map((holding, idx) => (
+                              <Table.Row key={idx}>
+                                {Object.keys(holding).map((key) => (
+                                  <Table.Cell key={key}>
+                                    {holding[key]?.toString() ?? "-"}
+                                  </Table.Cell>
+                                ))}
+                              </Table.Row>
+                            ))}
+                          </Table.Body>
+                        </Table.Root>
+                      </Box>
+                    </Box>
+                  </Tabs.Content>
+
+                  <Tabs.Content value="trades">
+                    <Box>
+                      <Text fontWeight="bold" mb={2}>
+                        Trade History (Last 90 days)
+                      </Text>
+                      <Box overflowX="auto">
+                        <Table.Root size="sm">
+                          <Table.Header>
+                            <Table.Row>
+                              {thList[0] &&
+                                Object.keys(thList[0]).map((key) => (
+                                  <Table.ColumnHeader key={key}>
+                                    {key}
+                                  </Table.ColumnHeader>
+                                ))}
+                            </Table.Row>
+                          </Table.Header>
+                          <Table.Body>
+                            {thList.map((trade, idx) => (
+                              <Table.Row key={idx}>
+                                {Object.keys(trade).map((key) => (
+                                  <Table.Cell key={key}>
+                                    {trade[key]?.toString() ?? "-"}
+                                  </Table.Cell>
+                                ))}
+                              </Table.Row>
+                            ))}
+                          </Table.Body>
+                        </Table.Root>
+                      </Box>
+                    </Box>
+                  </Tabs.Content>
+                </Tabs.Root>
+
+                {/* Action Buttons */}
+                <HStack justify="flex-end" mb={3}>
+                  <Button variant="outline" colorScheme="gray" onClick={onHClose}>
+                    Close
+                  </Button>
+                  <Button onClick={onRefuse} colorScheme="red">
+                    Refuse Wall Cross
+                  </Button>
+                  <Button onClick={onProceed} colorScheme="green">
+                    Proceed to Wall Cross
+                  </Button>
+                </HStack>
+              </VStack>
+            </Dialog.Body>
+          </Dialog.Content>
+        </Dialog.Positioner>
+      </Portal>
+    </Dialog.Root>
+  );
+}
