--- a/test/ty.html
+++ b/test/ty.html
@@ -5,3 +5,9 @@
   }
 
     onClick={handleClearFilters}
+
+const handleExport = () => {
+    if (window.exportGridData) {
+      window.exportGridData()
+    }
+  }
