--- a/test/asd.html
+++ b/test/asd.html
@@ -3,35 +3,33 @@ return React.createElement(
     {
       style: {
         display: "flex",
-        flexWrap: "wrap",
-        gap: "8px",
+        flexDirection: "column",   // one link per row
+        justifyContent: "center",  // vertical centering
+        alignItems: "center",      // horizontal centering
+        rowGap: "4px",
+        height: "100%",
+        textAlign: "center",
       },
     },
-    links.map((url, index) =>
-      React.createElement(
+    links.map((url: string, index: number) => {
+      // filename is text after last %5C
+      const fileName = url.split("%5C").pop() || url;
+
+      return React.createElement(
         "a",
         {
           key: index,
           href: downloadURL + url,
           target: "_blank",
           rel: "noopener noreferrer",
-          style: { textDecoration: "none" },
-        },
-        React.createElement(
-          "button",
-          {
-            style: {
-              padding: "4px 10px",
-              border: "1px solid #E2E8F0",
-              borderRadius: "6px",
-              background: "white",
-              cursor: "pointer",
-            },
+          style: {
+            color: "#3182CE",           // Chakra-ish blue
+            textDecoration: "underline",
+            cursor: "pointer",
+            whiteSpace: "nowrap",
           },
-          links.length > 1 ? `Download ${index + 1}` : "Download"
-        )
-      )
-    )
+        },
+        fileName
+      );
+    })
   );
-};
-✅ Use It in columnDe
